--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,20 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# Next build dir
+.next/
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
